my second commit

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="#menu">menu</a>
         <a href="#review">review</a>
         <a href="#order">order</a>
+        <a href ="NGO.html">NGO</a>
         
     </nav>
 
